<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_opt1"
        android:title="@string/action_opt1"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="1"
        android:showAsAction="always"/>

    <item android:id="@+id/action_opt2"
        android:title="@string/action_opt2"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="2"
        android:showAsAction="always"/>

    <item android:id="@+id/action_opt3"
        android:title="@string/action_opt3"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="3"
        android:showAsAction="always"/>

    <item android:id="@+id/action_opt4"
        android:title="@string/action_opt4"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"/>

</menu>
